Don't break when client ZIP is missing

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,9 +5,12 @@
   when: not openvpn_only_keys
 
 - name: openvpn pack clients
-  command: zip -j {{item.item}}.zip {{item.item}}.crt {{item.item}}.key {{item.item}}.ovpn ca.crt {{openvpn_tls_key if openvpn_tls_auth else ''}}
+  command: >
+    zip -ju {{item}}.zip {{item}}.crt {{item}}.key {{item}}.ovpn
+    ca.crt {{openvpn_tls_key if openvpn_tls_auth else ''}}
   args:
-    chdir: "{{ openvpn_keydir }}"
-  with_items: >
-    {{ openvpn_clients if (openvpn_ca_init_result.changed or openvpn_tls_key_result.changed)
-       else openvpn_clients_changed.results|selectattr('changed')|map(attribute='item')|list }}
+    chdir: "{{openvpn_keydir}}"
+  with_items: "{{openvpn_clients}}"
+  register: openvpn_pack_clients
+  changed_when: openvpn_pack_clients.rc != 12
+  failed_when: openvpn_pack_clients.rc not in [0, 12]
