--- a/tasks/setup-bridge.rh.yml
+++ b/tasks/setup-bridge.rh.yml
@@ -1,9 +1,34 @@
 ---
+    
+  - name: Setup up script
+    when: openvpn_bridge
+    template:
+      src: up.sh.j2
+      dest: "/etc/openvpn/up.sh"
+      mode: "o+x"
+  
+  - name: Setup down script
+    when: openvpn_bridge
+    template:
+      src: down.sh.j2
+      dest: "/etc/openvpn/down.sh"
+      mode: "o+x"
+      
+  - name: Setup bridge
+    when: openvpn_bridge
+    template:
+      src: bridge-interface.rh.j2
+      dest: "/etc/sysconfig/network-scripts/ifcfg-br-{{ openvpn_dev }}"
+    register: bridge
+    tags: [bridge]
 
-- name: Setup bridge
-  when: openvpn_bridge
-  template:
-    src: bridge-interface.rh.j2
-    dest: "/etc/sysconfig/network-scripts/ifcfg-br-{{ openvpn_dev }}"
-  register: bridge
-  tags: [bridge]
+  - name: Restart networking
+    service: name=network state=restarted
+    when: openvpn_bridge and bridge|changed
+    tags: [bridge]
+
+  - file: path={{ item }} state=absent
+    with_items:
+        - "/etc/sysconfig/network-scripts/ifcfg-br-{{ openvpn_dev }}"
+    when: not openvpn_bridge
+    tags: [bridge]
