--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -7,3 +7,6 @@
   command: zip -j {{openvpn_keydir}}/{{item.item}}.zip {{openvpn_keydir}}/{{item.item}}.crt {{openvpn_keydir}}/{{item.item}}.key {{openvpn_keydir}}/{{item.item}}.ovpn {{openvpn_keydir}}/ca.crt {{openvpn_tls_key if openvpn_tls_auth else ''}}
   when: item.changed
   with_items: "{{openvpn_clients_changed.results}}"
+
+- name: openvpn restart
+  service: name={{openvpn_service}} state=restarted
