Fix conditional check, 2.2+ undefined errors
@conorsch pointed out issues with my current conditional jinja if statement
in the client conf. In addition, I also smoked out some issues when you left
tls-auth disabled under ansible 2.2+

--- a/tasks/read-client-files.yml
+++ b/tasks/read-client-files.yml
@@ -31,3 +31,7 @@
   changed_when: false
   register: openvpn_read_client_key_files_results
   with_items: "{{ openvpn_clients }}"
+
+- set_fact:
+    openvpn_client_keys_output: "{{ openvpn_read_client_key_files_results.results }}"
+    openvpn_client_cert_output: "{{ openvpn_read_client_cert_files_results.results }}"
