Fix conditional check, 2.2+ undefined errors
@conorsch pointed out issues with my current conditional jinja if statement
in the client conf. In addition, I also smoked out some issues when you left
tls-auth disabled under ansible 2.2+

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -46,6 +46,11 @@
 - include: read-client-files.yml
   when: openvpn_unified_client_profiles
 
+- set_fact:
+    openvpn_client_keys_output: {}
+    openvpn_client_cert_output: {}
+  when: not openvpn_unified_client_profiles
+
 - name: Create client configuration directory if requested
   file: >
     path={{openvpn_client_config_dir}}
