--- a/tasks/read-client-files.yml
+++ b/tasks/read-client-files.yml
@@ -13,11 +13,6 @@
   changed_when: false
   when: openvpn_tls_auth
 
-- name: Set CA file contents as fact.
-  set_fact:
-    openvpn_ca_file_contents: "{{ openvpn_read_ca_file_results.stdout }}"
-    openvpn_tls_auth_file_contents: "{{ openvpn_read_tlsauth_file_results['content'] | b64decode | default('') }}"
-
 - name: Read client cert files.
   command: sed -n '/-----BEGIN CERTIFICATE-----/,/-----END CERTIFICATE-----/p' {{ openvpn_keydir }}/{{ item }}.crt
   no_log: true
@@ -32,6 +27,9 @@
   register: openvpn_read_client_key_files_results
   with_items: "{{ openvpn_clients }}"
 
-- set_fact:
-    openvpn_client_keys_output: "{{ openvpn_read_client_key_files_results.results }}"
+- name: Set client cert and CA info as fact.
+  set_fact:
+    openvpn_ca_file_contents: "{{ openvpn_read_ca_file_results.stdout }}"
     openvpn_client_cert_output: "{{ openvpn_read_client_cert_files_results.results }}"
+    openvpn_client_keys_output: "{{ openvpn_read_client_key_files_results.results }}"
+    openvpn_tls_auth_file_contents: "{{ openvpn_read_tlsauth_file_results['content'] | b64decode | default('') }}"
