--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -48,6 +48,7 @@ openvpn_key_size: 1024
 
 openvpn_clients: [client]                         # Make clients certificate
 openvpn_clients_revoke: []                        # Revoke clients certificates
+openvpn_client_cert_not_required: []              # Disable client certificate checking
 
 # Use PAM authentication
 openvpn_use_pam: yes
