--- a/tasks/openvpn.yml
+++ b/tasks/openvpn.yml
@@ -8,7 +8,7 @@
       - "{{ ansible_distribution }}.yml"
       - "{{ ansible_os_family }}.yml"
       - "Common-default.yml"
-      paths: vars
+      paths: "{{ role_path }}/vars"
 
 - include: install.deb.yml
   when: ansible_os_family == 'Debian'
