Document new option and set default

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,6 +14,7 @@ openvpn_host: "{{inventory_hostname}}"              # The server address
 openvpn_port: 1194
 openvpn_proto: udp
 openvpn_dev: tun
+openvpn_server_dev: "{{ openvpn_dev }}"
 openvpn_server: 10.8.0.0 255.255.255.0              # Set empty for skip
 openvpn_bridge: {}
 openvpn_max_clients: 100
