--- a/tasks/install.deb.yml
+++ b/tasks/install.deb.yml
@@ -2,8 +2,9 @@
 
 - name: Add OpenVPN repo GPG key (Debian)
   apt_key:
-    id: E158C569
-    url: https://swupdate.openvpn.net/repos/repo-public.gpg
+    id: 8E6DA8B4E158C569
+    keyserver: pgp.mit.edu
+    state: present
   when: openvpn_use_external_repo
 
 - name: Add OpenVPN repo sources (Debian)
