--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python: "2.7"
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq python-apt python-pycurl python-ipaddr
+ - sudo apt-get install -qq python-apt python-pycurl python-netaddr
 install:
   - pip install ansible>=1.6.0
 script:
