--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ language: python
 python: "2.7"
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq python-apt python-pycurl python-netaddr
+ - sudo apt-get install -qq python-apt python-pycurl
 install:
+  - pip install netaddr
   - pip install ansible>=1.6.0
 script:
   # Prepare tests
