Adds OS family check when installing debian package

--- a/tasks/firewall.yml
+++ b/tasks/firewall.yml
@@ -64,6 +64,7 @@
   apt:
     name: iptables-persistent
     force: yes
+  when: ansible_os_family == "Debian"
 
 - name: Save the rules (Debian)
   command: /etc/init.d/iptables-persistent save
