Add option for auth in config

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,7 +21,8 @@ openvpn_log: /var/log/openvpn.log                   # Log's directory
 openvpn_keepalive: "10 120"
 openvpn_ifconfig_pool_persist: ipp.txt
 openvpn_comp_lzo: yes                               # Enable compression
-openvpn_cipher: AES-256-GCM                         # Encryption algorithm
+openvpn_cipher: AES-256-CBC                         # Encryption algorithm
+openvpn_auth: SHA512
 openvpn_status: openvpn-status.log
 openvpn_verb: 3
 openvpn_tls_auth : False                            # Enable perfect forward secracyxy
