--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -43,7 +43,7 @@
   args: { removes: "{{ openvpn_keydir }}/{{item}}.crt" }
   with_items: "{{ openvpn_clients_revoke }}"
 
-- include: read-client-files.yml
+- import_tasks: read-client-files.yml
   when: openvpn_unified_client_profiles
 
 - name: Create client configuration directory if requested
