Add openssl.cfn link task

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -9,6 +9,12 @@
       keep_newer: yes
     when: not openvpn_use_system_easyrsa
 
+  - name: Generate openssl.cfn
+    file:
+      src: "{{ openvpn_etcdir }}/easy-rsa/openssl-1.0.0.cnf"
+      dest: "{{ openvpn_etcdir }}/easy-rsa/openssl.cnf"
+      state: link
+
   - name: Check if easy-rsa 2.x is available from the system
     stat: path=/usr/share/easy-rsa/build-ca
     register: openvpn_easyrsa_check
