--- a/tasks/install.deb.yml
+++ b/tasks/install.deb.yml
@@ -9,7 +9,7 @@
 - name: Add OpenVPN repo sources
   apt_repository:
     filename: openvpn
-    repo: deb http://swupdate.openvpn.net/apt {{ ansible_lsb.codename }} main
+    repo: deb http://build.openvpn.net/debian/openvpn/stable {{ ansible_lsb.codename }} main
   when: openvpn_use_external_repo
 
 - name: Install requirements (Debian)
