--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -102,7 +102,7 @@
 - name: Set ip forwarding in the sysctl file and reload if necessary
   sysctl: name="net.ipv4.ip_forward" value=1 sysctl_set=yes state=present reload=yes
 
-- name: Sync local keys
+- name: Download local keys
   copy:
     src: /etc/openvpn/keys
     dest: "{{ openvpn_download_dir }}"
