--- a/tasks/install.yum.yml
+++ b/tasks/install.yum.yml
@@ -1,3 +1,27 @@
 ---
 
-- fail: msg="RedHat is not supported now"
+- name: Install EPEL repository
+  yum:
+    name: epel-release
+
+- name: Install requirements (RedHat)
+  apt: name={{item}} force=yes
+  with_items: [openvpn, openssl, zip]
+
+- name: Install dependencies (RedHat)
+  apt: name={{item}} force=yes
+  when: openvpn_use_pam_users|default(false)
+  with_items: [python-passlib]
+
+- name: Install easy-rsa package
+  apt: name=easy-rsa
+  when: openvpn_use_system_easyrsa
+
+- name: Install LDAP dependencies (Debian)
+  apt: name=openvpn-auth-ldap force=yes
+  when: openvpn_use_ldap
+
+- name: Install bridge dependencies (Debian)
+  apt: name={{item}}
+  when: openvpn_bridge
+  with_items: [bridge-utils]
