--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,6 +11,9 @@ galaxy_info:
   - name: Ubuntu
     versions:
     - all
+  - name: EL
+    versions:
+    - 7
   categories:
   - system
   - networking
