Add a handler to be used by other roles after openvpn is done
With this other roles could listen to this handler and react to backup
the keys somewhere else

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -9,3 +9,6 @@
   with_items: "{{openvpn_clients_changed.results}}"
   args:
     chdir: "{{ openvpn_keydir }}"
+
+- name: openvpn configuration done
+  command: "true"
