--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -92,3 +92,7 @@
 
 - name: Set ip forwarding in the sysctl file and reload if necessary
   sysctl: name="net.ipv4.ip_forward" value=1 sysctl_set=yes state=present reload=yes
+
+- name: Notify handlers that openvpn configuration is done
+  command: "true"
+  notify: openvpn configuration done
