checking openvpn_use_pam_users with length, as openvpn_use_pam_users is a list, not a dict

--- a/tasks/install.yum.yml
+++ b/tasks/install.yum.yml
@@ -11,7 +11,7 @@
 
 - name: Install dependencies (RedHat)
   apt: name={{item}} force=yes
-  when: openvpn_use_pam_users|default(false)
+  when: openvpn_use_pam_users|length
   with_items: [python-passlib]
 
 - name: Install easy-rsa package
