Fixing pam.d config for CentOS Added toggle and path to fetch client configuration

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -51,6 +51,8 @@ openvpn_clients_revoke: []                        # Revoke clients certificates
 
 # Use PAM authentication
 openvpn_use_pam: yes
+# pam_pwdfile is not present on RH/CentOS, hence the following will not work.
+# TODO: create unix users and set passwords on redhat
 openvpn_use_pam_users: []                         # If empty use system users
                                                   # otherwise use users from the option
                                                   # openvpn_use_pam_users:
@@ -67,3 +69,6 @@ openvpn_simple_auth_password: ""
 
 # Whether to embed CA, cert, and key info inside client OVPN config file.
 openvpn_unified_client_profiles: no
+# Whether to fetch generated client profiles from the server.
+openvpn_fetch_client_profiles: no
+openvpn_fetch_client_profiles_localpath: /tmp
