--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,12 +3,18 @@
 - name: openvpn restart
   service: name={{openvpn_service}} state=restarted
 
-- name: openvpn pack clients
+- name: openvpn zip client config
+  listen: openvpn pack clients
   command: zip -j {{item.item}}.zip {{item.item}}.crt {{item.item}}.key {{item.item}}.ovpn ca.crt {{openvpn_tls_key if openvpn_tls_auth else ''}}
   when: item.changed
   with_items: "{{openvpn_clients_changed.results}}"
   args:
     chdir: "{{ openvpn_keydir }}"
+
+- name: openvpn fetch client config
+  listen: openvpn pack clients
+  fetch: src={{openvpn_keydir}}/client.zip dest={{openvpn_fetch_client_profiles_localpath}} flat=yes
+  when: openvpn_fetch_client_profiles 
 
 - name: openvpn restart
   service: name={{openvpn_service}} state=restarted
